updates for 2023 image break

--- a/docs/02.02.01 - Monitoring Canvas Apps - Auditing and Activity Logs Part 1.md
+++ b/docs/02.02.01 - Monitoring Canvas Apps - Auditing and Activity Logs Part 1.md
@@ -1,4 +1,11 @@
 # Monitoring the Power Platform: Canvas Driven Apps - Auditing and Activity Logs Part 1
+## Author Note
+All content, including samples, images and writings can be found in [my GitHub repo](https://github.com/aliyoussefi/MonitoringPowerPlatform/tree/main).
+
+This specific article appears [here](02.02.01%20-%20Monitoring%20Canvas%20Apps%20-%20Auditing%20and%20Activity%20Logs%20Part%201.md).
+
+## Revisions
+02/12/2023 - Updated link.
 
 ## Summary
 
@@ -175,11 +182,11 @@ In the image above, I gave the user the "*Custom Sys Admins*" security role for 
 
 In this article we have covered getting started with the **Power App Administration PowerShell** module and cmdlets for **Featured and Hero App promotion**. Continue exploring the capabilities of this module as it pertains to your **Power Apps Canvas App** administrative operations. 
 
-We have also covered the what activities are currently captured for **Power Apps Canvas Apps**. Discussed in [**Part 2**](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-canvas-apps---auditing-and-activity-logs-part-2) are techniques to view the audit logs within the **Office 365 Security and Compliance Portal** as well as **automated techniques**. 
+We have also covered the what activities are currently captured for **Power Apps Canvas Apps**. Discussed in [**Part 2**](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-canvas-apps---auditing-and-activity-logs-part-2) are techniques to view the audit logs within the **Microsoft Purview Compliance Portal** as well as **automated techniques**. 
 
 This article is designed to supplement the article on **Power App Analytics**, which provides more of an all up view of **Canvas App** usage. Combining these two documents, an administrator can now <u>track analytic metrics as well as the events that define those metrics</u>.
 
-If you are interested in learning more about [**specialized guidance and training** for monitoring or other areas of the Power Platform](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), which includes a [monitoring workshop](https://community.dynamics.com/cfs-file/__key/communityserver-blogs-components-weblogfiles/00-00-00-17-38/WorkshopPLUS-_2D00_-Dynamics-365-Customer-Engagement-Monitoring-with-Application-lnsights-1-Day-with-Lab_2D00_FA5D599F_2D00_20E4_2D00_4087_2D00_A713_2D00_39FBD14DF7E5.pdf), please contact your **Technical Account Manager** or **Microsoft representative** for further details. 
+If you are interested in learning more about [**specialized guidance and training** for monitoring or other areas of the Power Platform](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), which includes a [monitoring workshop](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), please contact your **Microsoft representative** for further details. 
 
 Your feedback is **<u>extremely valuable</u>** so please leave a comment below and I'll be happy to help where I can! Also, if you find any inconsistencies, omissions or have suggestions, [please go here to submit a new issue](https://github.com/aliyoussefi/MonitoringPowerPlatform/issues).
 
