--- a/docs/02.02.02 - Monitoring Canvas Apps - Auditing and Activity Logs Part 2.md
+++ b/docs/02.02.02 - Monitoring Canvas Apps - Auditing and Activity Logs Part 2.md
@@ -1,14 +1,20 @@
 # Monitoring the Power Platform: Canvas Apps - Auditing and Activity Logs Part 2
 
+## Author Note
+All content, including samples, images and writings can be found in my GitHub repo: aliyoussefi/MonitoringPowerPlatform: This repo is designed to document and provide guidance on Monitoring with the Power Platform (github.com)
+
+## Revisions
+02/12/2023 - Fixed images, updated Office 365 Security and Compliance Center to Microsoft Purview Compliance Center. Updated Titles and workshop direct link.
+
 ## Summary
 
 **Microsoft Power Apps Canvas Apps** provide users the ability to quickly create and publish applications to their enterprise. With this ability comes concerns with governance to ensure users are allowed the appropriate permissions as well as identifying and highlighting specific apps across the organization.
 
-This article will build off of **Canvas Apps - Auditing and Activity Part 1** to examine how to **search and store audit and activity logs** for **Canvas Apps**. This includes how to turn on auditing, how to use the **Office 365 Compliance Portal**, the **Unified Audit Log PowerShell command** and the **Office 365 Management Activity API**. We will conclude with thoughts on monitoring tools such as **Azure Sentinel**, and storage tools such as **Cosmos DB** and **Azure Blob Storage**.
+This article will build off of **Canvas Apps - Auditing and Activity Part 1** to examine how to **search and store audit and activity logs** for **Canvas Apps**. This includes how to turn on auditing, how to use the **Purview Compliance Portal**, the **Unified Audit Log PowerShell command** and the **Office 365 Management Activity API**. We will conclude with thoughts on monitoring tools such as **Azure Sentinel**, and storage tools such as **Cosmos DB** and **Azure Blob Storage**.
 
 ## Searching the Unified Audit Log
 
-**Searching** the **Unified Audit Log** can be performed both **manually** and with **automation**. Manually there is a portal called the **Office 365 Security and Compliance Center Portal** that provides a **centralized area for auditing all Office 365 services including the Power Platform**. If automation is desired the **Unified Audit Log offers both a PowerShell module and an API** which can be subscribed to. This section covers all three of these in detail. 
+**Searching** the **Unified Audit Log** can be performed both **manually** and with **automation**. Manually there is a portal called the **Microsoft Purview Compliance Center Portal** that provides a **centralized area for auditing all Office 365 services including the Power Platform**. If automation is desired the **Unified Audit Log offers both a PowerShell module and an API** which can be subscribed to. This section covers all three of these in detail. 
 
 ## The Office 365 Security and Compliance Center Portal
 
@@ -18,9 +24,9 @@ To begin using the **Office 365 Unified Audit Log**, your organization will need
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/UnifiedAuditLog/UnifiedAuditLog-NotLicensed-Error-EnableUnifiedAuditLogIngestion.JPG" style="zoom:50%;" />
 
-Users will need to be an Office 365 Global Administrator or be a member of one or more Security and Compliance Center role groups. [To provide a user access to the Security and Compliance Center](https://docs.microsoft.com/en-us/microsoft-365/security/office-365-security/grant-access-to-the-security-and-compliance-center?view=o365-worldwide), use the **Office 365 Admin Center** and open the Admin center for Compliance. Alternatively, you can directly access the permissions page from [here](https://protection.office.com/permissions). The permission needed is "**View-Only Audit Logs**" or "**Audit Logs**" which allows for viewing and exporting of audit reports.
+Users will need to be an Office 365 Global Administrator or be a member of one or more Purview Compliance Center role groups. [To provide a user access to the Security and Compliance Center](https://docs.microsoft.com/en-us/microsoft-365/security/office-365-security/grant-access-to-the-security-and-compliance-center?view=o365-worldwide), use the **Office 365 Admin Center** and open the Admin center for Compliance. Alternatively, you can directly access the permissions page from [here](https://protection.office.com/permissions). The permission needed is "**View-Only Audit Logs**" or "**Audit Logs**" which allows for viewing and exporting of audit reports.
 
-### Navigating the Office 365 Compliance Center Portal
+### Navigating the Microsoft Purview Compliance Center Portal
 
 The **Office 365 Security and Compliance Center** found at https://protection.office.com can be used by security analysts to manually search for specific events using a portal user interface. 
 
@@ -76,7 +82,7 @@ $startDate = $endDate.AddDays(-7) #Search last 7 days
 Search-UnifiedAuditLog -StartDate $startDate -EndDate $endDate -RecordType PowerAppsApp
 ```
 
-![](https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/CanvasApps/UnifiedAuditLog-Examples.JPG)
+![](https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/CanvasApps/UnifiedAuditLog-Examples.JPG)
 
 As the image above shows, this will bring back all activities related to **Canvas Apps**. Depending on what type of audit record you're looking for, the search can be filtered using the **Operation** argument.
 
@@ -161,7 +167,7 @@ From what I've seen, each blob contains around 10-15 minutes worth of audits but
 
 <flow image>
 
-![](https://raw.githubusercontent.com/wiki/aliyoussefi/MonitoringPowerPlatform/Artifacts/UnifiedAuditLog/ActvitiyAPI/ActivityApi.WebHook.DeliveryTimings.JPG)
+![](https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/UnifiedAuditLog/ActvitiyAPI/ActivityApi.WebHook.DeliveryTimings.JPG)
 
 ## Managing, Archiving and Retaining Events
 
