--- a/docs/02.03 - Monitoring Canvas Apps - Monitoring Tool.md
+++ b/docs/02.03 - Monitoring Canvas Apps - Monitoring Tool.md
@@ -1,4 +1,12 @@
-# Monitoring the Power Platform: Canvas Driven Apps - The Monitoring Tool
+# Monitoring the Power Platform: Canvas Apps - The Monitoring Tool
+
+## Author Note
+All content, including samples, images and writings can be found in [my GitHub repo](https://github.com/aliyoussefi/MonitoringPowerPlatform/tree/main).
+
+This specific article appears [here](02.03%20-%20Monitoring%20Canvas%20Apps%20-%20Monitoring%20Tool.md).
+
+## Revisions
+02/12/2023 - Updated link.
 
 ## Summary
 
@@ -42,7 +50,7 @@ Each keystroke is captured as a ***UserAction*** entry. Wait time and data input
 
 Each monitor entry includes **a unique id called a <u>uuid</u>**, **the time of the entry, the operation, the control type and name and the data collected**. The image below shows a calendar control with the value input.
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/CanvasApps/MonitoringTool/MonitoringTool.Calendar.SetProperty.Example.JPG"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/CanvasApps/MonitoringTool/MonitoringTool.Calendar.SetProperty.Example.JPG"  />
 
 In a recent investigation, I was able to use this property, along with the patch operation, to better understand why the date selected by the user was not matching to the connected data source.
 
@@ -50,7 +58,7 @@ In a recent investigation, I was able to use this property, along with the patch
 
 The ability to capture and **investigate Connection and Power Automate integration requests and responses is where, in my opinion, the monitoring tool really begins to prove how essential of a tool it is** for a developer. Each request and response made to a first class connector or custom connector is captured as a Network entry.
 
-![](https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/CanvasApps/CanvasApp-Monitor-Network-Entries.JPG)
+![](https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/CanvasApps/CanvasApp-Monitor-Network-Entries.JPG)
 
 As shown above, a developer can view the **HTTP status, the duration, which operation and data source was used, as well as which control property invoked the action** for all calls made to Power Automate. This view allows a quick look to first see which calls may have failed and then to dig into the performance and payload size for tuning opportunities. 
 
@@ -58,13 +66,13 @@ In my experience **using this tool at the beginning of the development of a Powe
 
 The image below shows, along with duration and payload size, the response headers for a native connection to [the Azure DevOps connector for the List release definitions response](https://docs.microsoft.com/en-us/connectors/visualstudioteamservices/#list-release-definitions).
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/CanvasApps/CanvasApp-Monitor-Network-ListReleaseDefinitions-Response-Headers.JPG"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/CanvasApps/CanvasApp-Monitor-Network-ListReleaseDefinitions-Response-Headers.JPG"  />
 
 The provided connectors should work as expected but its helpful to review these headers to gain insights into how they work. Where I find value in response headers is when working with either custom connectors or **invoking Power Automate flows from Canvas Apps**.
 
 The image below is from a custom connector built using an **Azure Function**. As shown, the "***x-ms-client-request-id***" header is passed back but this can be expanded depending on the function output.
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/CanvasApps/MonitoringTool/MonitoringTool.AzureFunction.Example.JPG"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/CanvasApps/MonitoringTool/MonitoringTool.AzureFunction.Example.JPG"  />
 
 Depending on the value or control, the data needs to be consumable or else it cannot be rendered correctly. This tends to come up when working with tables or galleries within Canvas Apps that expect a flattened table, meaning columns that include complex objects or even array objects returned have some trouble.
 
@@ -74,7 +82,7 @@ I ran into this scenario when working with the [Send an HTTP request to Azure De
 
 The image below shows a technique I used to assist with working with the Azure DevOps action.
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/CanvasApps/CanvasApp-Monitor-Network-GetBuilds-Response-Headers-PowerAutomate-Custom.JPG"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/CanvasApps/CanvasApp-Monitor-Network-GetBuilds-Response-Headers-PowerAutomate-Custom.JPG"  />
 
 This image also shows very important headers we will discuss further in an article detailing the connectors between **Power Apps Canvas Apps and Power Automate**.
 
@@ -84,25 +92,25 @@ This image also shows very important headers we will discuss further in an artic
 
 The **Monitoring tool** allows developers and makers to export the captured events to a CSV or JSON file. This can assist with **troubleshooting connection issues, performance issues or simply to archive events for analysts**. The file includes the request and response payload found in the online tool as well as the default columns. **Having the request can potentially allow for the request to be issued again invoking any external system so be cautious when handing off this file**. The exported file can also be imported back into tool for a detailed breakdown.
 
-![](https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/CanvasApps/CanvasApp-Monitor-Export-CSV.JPG)
+![](https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/CanvasApps/CanvasApp-Monitor-Export-CSV.JPG)
 
 ### Reporting
 
 **Microsoft Power BI** provides data connectors for CSV and JSON files. With this connector, Power BI authors can take exported monitoring tool sessions and build visualizations allowing analysts to drill down into specifics.
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/CanvasApps/MonitoringTool/MonitoringTool.PowerBI.Service.Example.JPG"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/CanvasApps/MonitoringTool/MonitoringTool.PowerBI.Service.Example.JPG"  />
 
 ### Archiving
 
 Another neat feature of **Microsoft Power BI** is the ability to connect to a **Azure Blob Storage container**. Once connected, Power BI can combine files into a single query which can be used within a report. This technique will allow us to upload the session directly to a container and have this instantly be part of the **Power BI dashboard**.
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/CanvasApps/MonitoringTool/UploadMonitoringSessionToAzureAndPowerBi.gif"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/CanvasApps/MonitoringTool/UploadMonitoringSessionToAzureAndPowerBi.gif"  />
 
 ## Next Steps
 
-The native **Monitoring Tool** is a relatively new feature for **Canvas Driven Applications**. I highly recommend using the tool as early in the development process as possible to better understand how the application works and where it could be tuned. The Monitoring tool really helped me better understand my integrations and how to work within the expected data delivered back to Canvas App objects.
+The native **Monitoring Tool** is a relatively new feature for **Canvas Applications**. I highly recommend using the tool as early in the development process as possible to better understand how the application works and where it could be tuned. The Monitoring tool really helped me better understand my integrations and how to work within the expected data delivered back to Canvas App objects.
 
-If you are interested in learning more about [**specialized guidance and training** for monitoring or other areas of the Power Platform](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), which includes a [monitoring workshop](https://community.dynamics.com/cfs-file/__key/communityserver-blogs-components-weblogfiles/00-00-00-17-38/WorkshopPLUS-_2D00_-Dynamics-365-Customer-Engagement-Monitoring-with-Application-lnsights-1-Day-with-Lab_2D00_FA5D599F_2D00_20E4_2D00_4087_2D00_A713_2D00_39FBD14DF7E5.pdf), please contact your **Technical Account Manager** or **Microsoft representative** for further details. 
+If you are interested in learning more about [**specialized guidance and training** for monitoring or other areas of the Power Platform](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), which includes a [monitoring workshop](https://community.dynamics.com/cfs-file/__key/communityserver-blogs-components-weblogfiles/00-00-00-17-38/WorkshopPLUS-_2D00_-Dynamics-365-Customer-Engagement-Monitoring-with-Application-lnsights-1-Day-with-Lab_2D00_FA5D599F_2D00_20E4_2D00_4087_2D00_A713_2D00_39FBD14DF7E5.pdf), please contact your **Microsoft representative** for further details. 
 
 Your feedback is **<u>extremely valuable</u>** so please leave a comment below and I'll be happy to help where I can! Also, if you find any inconsistencies, omissions or have suggestions, [please go here to submit a new issue](https://github.com/aliyoussefi/MonitoringPowerPlatform/issues).
 
