--- a/docs/02.05 - Power Apps - Power Apps Component Framework.md
+++ b/docs/02.05 - Power Apps - Power Apps Component Framework.md
@@ -92,19 +92,19 @@ For this article just be aware that **Azure Application Insights** can be used t
 
 Here is an example of tracking a custom event within the **initialize** method:
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PCF/AppInsights.PcfControl.init.JPG" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PCF/AppInsights.PcfControl.init.JPG" style="zoom:50%;" />
 
 Here is an example of tracking a custom event within the **update view** method:
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PCF/AppInsights.PcfControl.updateView.JPG" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PCF/AppInsights.PcfControl.updateView.JPG" style="zoom:50%;" />
 
 Here is an example of tracking a custom event within the **get outputs** method:
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PCF/AppInsights.PcfControl.getOutputs.JPG" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PCF/AppInsights.PcfControl.getOutputs.JPG" style="zoom:50%;" />
 
 Here is an example of tracking a custom event within the **destroy** method:
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PCF/AppInsights.PcfControl.Destroy.JPG" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PCF/AppInsights.PcfControl.Destroy.JPG" style="zoom:50%;" />
 
 ## Configure Context
 
@@ -112,11 +112,11 @@ Adding context to **Azure Application Insights** messages is extremely important
 
 The image below shows a captured Fiddler trace of a default context properties.
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PCF/AppInsights.DefaultContext.Fiddler.JPG"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PCF/AppInsights.DefaultContext.Fiddler.JPG"  />
 
 [To add or modify context for all messages](https://github.com/microsoft/ApplicationInsights-JS#telemetry-initializers) sent to **Azure Application Insights**, use the ***addTelemetryInitializer*** method. This method provides the ability to pass in a custom envelope which can be extended to modify or extend properties of an Azure Application Insights message. Here, developers can set cloud role and instance, operation names and identifiers, and even custom properties that will be included in each record in the **Azure Application Insights** tables.
 
- <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PCF/AppInsights.PcfControl.AddTelemetryInitalizer.Full.JPG" style="zoom:50%;" />
+ <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PCF/AppInsights.PcfControl.AddTelemetryInitalizer.Full.JPG" style="zoom:50%;" />
 
 The first part of the code above creates an object that contains **Azure Application Insights** tags and custom properties. These **tags will align with the session and operational context for each message** sent from the PCF control.
 
@@ -156,15 +156,15 @@ The sample code above uses the [***userId***](https://docs.microsoft.com/en-us/p
 
 Once the control is implemented with a **Model Driven Application**, data will being to flow to **Azure Application Insight**s. An interesting note here is that the **Azure Application Insights SDK** is also used by the platform. In some cases the events sent from your **Model Driven Application** may be delivered in the same envelope! Don't worry, this has no impact to the platform and will not break if the platform changes how it delivers messages.
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PCF/AppInsights.HitchingARide.JPG" style="zoom:80%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PCF/AppInsights.HitchingARide.JPG" style="zoom:80%;" />
 
 Once delivered, **user session and events** will begin to appear. The below example shows the **init** method, followed by the **updateview** and **getOutputs** with user interaction in between.
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PCF/AppInsights.PCFControl.Session.Full.JPG" style="zoom:80%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PCF/AppInsights.PCFControl.Session.Full.JPG" style="zoom:80%;" />
 
 Example of a **custom event** record:
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PCF/AppInsights.PCFControl.CustomEvent.Full.JPG" style="zoom:80%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/PCF/AppInsights.PCFControl.CustomEvent.Full.JPG" style="zoom:80%;" />
 
 [This reference includes all the sample code above and additional usage](https://github.com/aliyoussefi/MonitoringPowerPlatform/blob/master/Samples/PCF/AppInsights/index.ts) showing how to send various events to **Azure Application Insights**.
 
@@ -174,7 +174,7 @@ In this article we have discussed how to add **Azure Application Insights** to *
 
 In an upcoming article, we will explore the tools within **Azure Application Insights** that rely on the context properties discussed at the end of this current article. Configuring both the actual delivery mechanism and adding context will help expose insights from the data collected.
 
-If you are interested in learning more about [**specialized guidance and training** for monitoring or other areas of the Power Platform](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), which includes a [monitoring workshop](https://community.dynamics.com/cfs-file/__key/communityserver-blogs-components-weblogfiles/00-00-00-17-38/WorkshopPLUS-_2D00_-Dynamics-365-Customer-Engagement-Monitoring-with-Application-lnsights-1-Day-with-Lab_2D00_FA5D599F_2D00_20E4_2D00_4087_2D00_A713_2D00_39FBD14DF7E5.pdf), please contact your **Technical Account Manager** or **Microsoft representative** for further details. 
+If you are interested in learning more about [**specialized guidance and training** for monitoring or other areas of the Power Platform](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), which includes a [monitoring workshop](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), please contact your **Microsoft representative** for further details. 
 
 Your feedback is **<u>extremely valuable</u>** so please leave a comment below and I'll be happy to help where I can! Also, if you find any inconsistencies, omissions or have suggestions, [please go here to submit a new issue](https://github.com/aliyoussefi/MonitoringPowerPlatform/issues).
 
