--- a/docs/02.04 - Monitoring Canvas Apps - Getting Started with Application Insights.md
+++ b/docs/02.04 - Monitoring Canvas Apps - Getting Started with Application Insights.md
@@ -22,71 +22,71 @@ Adding **Azure Application Insights** message delivery is a <u>native feature</u
 
 **To add the Instrumentation Key to your Canvas App**, open the Power Apps Studio and **locate the 'App' in the Tree view**.
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/CanvasApps/AppInsights/AddAppInsights.JPG"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/CanvasApps/AppInsights/AddAppInsights.JPG"  />
 
 Next, in the **App Object window** to the right, add the **Azure Application Insights Instrumentation Key**.
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/CanvasApps/AddAppInsightsKey.JPG"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/CanvasApps/AddAppInsightsKey.JPG"  />
 
 ## Adding and Locating Identifiers
 
 Identifiers in Canvas Apps come in various formats including the user playing the **app, the session id, the player version, app version, etc**. These data elements are a must when troubleshooting and monitoring how your users interact with your app. Some of the data points I find valuable are **the app and player build numbers which are key to understanding if users are using out of date player versions**. The other major data point is the **session id**. For an app user, to obtain these values, **navigate to the Settings window and click '*Session details*'.**
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/CanvasApps/CanvasApp-Settings.JPG"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/CanvasApps/CanvasApp-Settings.JPG"  />
 
 **<u>Session Window:</u>**
 
-![](https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/CanvasApps/CanvasApp-Settings-SessionWindow.JPG)
+![](https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/CanvasApps/CanvasApp-Settings-SessionWindow.JPG)
 
 If a user reports an issue, having **the session id and Power Apps player version can help with troubleshooting**. That said, currently I don't see a way to grab the session id natively using Canvas App functions. 
 
 <u>NOTE: The Power App connector for Power Automate can assist in the session id discovery. More to come in a future article.</u>
 
-![](https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/CanvasApps/AppInsights/SessionIdBetweenCanvasAppAndAppInsights.gif)
+![](https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/CanvasApps/AppInsights/SessionIdBetweenCanvasAppAndAppInsights.gif)
 
 ## Adding Traces
 
 The **Trace function** is used to send messages to the **traces** table in **Application Insights**. This allows makers the **ability to add telemetry and instrumentation from practically any control on any screen**. This also opens us up to generating identifiers for specific actions which can be used for troubleshooting in a live environment. The below image shows using informational traces to **capture the timings between the invocation of a Power Automate flow**. The image shows a trace for the button click, and entries for **adding instrumentation for a Power Automate flow**.
 
-![](https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/CanvasApps/GetBuildsScreen-Telemetry-PowerAutomate.JPG)
+![](https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/CanvasApps/GetBuildsScreen-Telemetry-PowerAutomate.JPG)
 
 The image below is the result of the Trace methods showing the message and the time stamp for each entry. 
 
-![](https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/CanvasApps/GetBuilds-AppInsights-Telemetry-GetBuilds.JPG)
+![](https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/CanvasApps/GetBuilds-AppInsights-Telemetry-GetBuilds.JPG)
 
 **Traces can three types**: Information (for operational activities), Warnings (non breaking issue), or Errors (breaking issue).
 
-![](https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/CanvasApps/GetBuildsScreen-Telemetry-TraceSeverity.JPG)
+![](https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/CanvasApps/GetBuildsScreen-Telemetry-TraceSeverity.JPG)
 
 Based on the severity level, the Application Insights record will change.
 
-![](https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/CanvasApps/GetBuilds-AppInsights-Telemetry-TraceSeverity.JPG)
+![](https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/CanvasApps/GetBuilds-AppInsights-Telemetry-TraceSeverity.JPG)
 
 ## Exploring what's delivered
 
 At the time of this writing the tables data is delivered to natively **include the *customEvents*,  *pageViews* and *browserTimings* tables**. Each table contains generic **Azure Application Insights properties** as well as specific relevant properties. 
 
-![](https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/CanvasApps/AppInsights/AppInsights.NativeAppEntries.png)
+![](https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/CanvasApps/AppInsights/AppInsights.NativeAppEntries.png)
 
 The ***customEvents*** table shows **when the published app was started**.
 
-![](https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/CanvasApps/GetBuilds-AppInsights-Telemetry-customEvents.JPG)
+![](https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/CanvasApps/GetBuilds-AppInsights-Telemetry-customEvents.JPG)
 
 ***pageViews*** - The **pageViews** table is **included when Azure Application Insights is added to Canvas Apps**. The message received by **Application Insights** contains the URL, the name of the screen within your app and the duration as well as a handy performance bucket. Using the duration along with contextual information from the session and user we can begin to identify performance concerns.
 
-![](https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/CanvasApps/GetBuilds-AppInsights-Telemetry-pageViews.JPG)
+![](https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/CanvasApps/GetBuilds-AppInsights-Telemetry-pageViews.JPG)
 
 <u>NOTE: I have seen the **pageViews** duplicate duration across all screens. Consider adding trace events in the **Maker Defined Events** section or a technique to find the difference between **pageView** entries in Kusto.</u>
 
 **browserTimings** - This represents browser interactions including the send and receive duration, the client processing time and the all up total duration. Similar to the **pageViews** table a performance bucket is present allowing for a general visualization.
 
-![](https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/CanvasApps/GetBuilds-AppInsights-Telemetry-browserTimings.JPG)
+![](https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/CanvasApps/GetBuilds-AppInsights-Telemetry-browserTimings.JPG)
 
 ### Maker Defined Events
 
 The ***traces*** table contains **information sent from the app by the platform and the maker using the *Trace()* method**. For the platform trace events, the user agent string and client information is captured. For the trace method, as shown above an enumeration is used to set the severity from the Canvas App. In Application Insights this translates to a number.
 
-![](https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/CanvasApps/GetBuilds-AppInsights-Telemetry-TraceSeverity.JPG)
+![](https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/CanvasApps/GetBuilds-AppInsights-Telemetry-TraceSeverity.JPG)
 
 ## Useful Kusto Queries
 
@@ -152,13 +152,13 @@ union (traces), (requests), (pageViews), (dependencies), (customEvents), (availa
 
 **Application Insights contains a User Session feature that can help visualize and provide data points** for the specific session. The image below combines custom events and page views.
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/CanvasApps/AppInsights/CanvasApp,AppInsights.Users.SessionTimeline.JPG" style="zoom:67%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/main/Artifacts/CanvasApps/AppInsights/CanvasApp,AppInsights.Users.SessionTimeline.JPG" style="zoom:67%;" />
 
 ## Next Steps
 
 The native functionality of **Azure Application Insights traceability is a relatively new feature for Canvas Apps**. I would also expect to see additional messages delivered to missing tables above such as exceptions and custom metrics. In the meantime consider using a **Power Automate flow** to send events, a custom connector or the [Log Analytics Data Collector connector](https://docs.microsoft.com/en-us/connectors/azureloganalyticsdatacollector/). This connector requires a P1 license but does allow to **send data to a Log Analytics workspace** which can be queried and monitored by **Azure Monitor and other platforms**. 
 
-If you are interested in learning more about [**specialized guidance and training** for monitoring or other areas of the Power Platform](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), which includes a [monitoring workshop](https://community.dynamics.com/cfs-file/__key/communityserver-blogs-components-weblogfiles/00-00-00-17-38/WorkshopPLUS-_2D00_-Dynamics-365-Customer-Engagement-Monitoring-with-Application-lnsights-1-Day-with-Lab_2D00_FA5D599F_2D00_20E4_2D00_4087_2D00_A713_2D00_39FBD14DF7E5.pdf), please contact your **Technical Account Manager** or **Microsoft representative** for further details. 
+If you are interested in learning more about [**specialized guidance and training** for monitoring or other areas of the Power Platform](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), which includes a [monitoring workshop](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), please contact your **Microsoft representative** for further details. 
 
 Your feedback is **<u>extremely valuable</u>** so please leave a comment below and I'll be happy to help where I can! Also, if you find any inconsistencies, omissions or have suggestions, [please go here to submit a new issue](https://github.com/aliyoussefi/MonitoringPowerPlatform/issues).
 
