--- a/docs/03.01 - Monitoring Model Driven Apps - Dataverse for Analytics.md
+++ b/docs/03.01 - Monitoring Model Driven Apps - Dataverse for Analytics.md
@@ -1,30 +1,36 @@
-# Monitoring the Power Platform: Model Driven Apps - Common Data Service for Analytics
+# Monitoring the Power Platform: Model Driven Apps - Dataverse for Analytics
+
+## Author Note
+All content, including samples, images and writings can be found in my GitHub repo: aliyoussefi/MonitoringPowerPlatform: This repo is designed to document and provide guidance on Monitoring with the Power Platform (github.com)
+
+## Revisions
+02/10/2023 - Fixed images, updated Common Data Service to Dataverse
 
 ## Summary
 
 The idea of monitoring **Dynamics 365 or Model Driven Applications** is not a new concept. Understanding where services are **failing**, users are **interacting** with the platform, where **form** and **business processes** could be **tuned for performance** are key drivers for most if not all businesses, from small companies to enterprises. Luckily, the **Power Platform** provides many tools to help audit and monitor business and operational events.
 
-This article will cover locating and downloading environment analytics using the **Common Data Service for Analytics**. Questions regarding capacity and all up usage can be answered here. For operational events the **Release Wave 1 2020 for Power Apps** will be explored for feature announcement to allow for both manual and automated gathering and alerting. 
+This article will cover locating and downloading environment analytics using the **Dataverse for Analytics**. Questions regarding capacity and all up usage can be answered here. For operational events the **Release Wave 1 2020 for Power Apps** will be explored for feature announcement to allow for both manual and automated gathering and alerting. 
 
-## Organization Insights / CDS for Analytics
+## Organization Insights / Dataverse Analytics
 
-A **Common Data Service** specific feature is the former Organization Insights or now called the **Common Data Service for Analytics** or **CDS-A**. Its key to point out here that Organization Insights will no longer be supported in future releases per [this document](https://docs.microsoft.com/en-us/power-platform/admin/analytics-common-data-service). Some of the key analytics compiled include **active user usage** and **operations performed**, **customizations used**, **storage consumed** and **failed workflows and API** calls.
+A **Dataverse** specific feature is the former Organization Insights or now called the **Dataverse for Analytics**. Its key to point out here that Organization Insights will no longer be supported in future releases per [this document](https://docs.microsoft.com/en-us/power-platform/admin/analytics-common-data-service). Some of the key analytics compiled include **active user usage** and **operations performed**, **customizations used**, **storage consumed** and **failed workflows and API** calls.
 
-### CDS for Analytics in the Power Platform Admin Center
+### Dataverse Analytics in the Power Platform Admin Center
 
-Analytics for the Common Data Service can be observed within the **Power Platform Admin Center**. To navigate to these analytics, simply expand the Analytics area of the **Power Platform Admin Center** and choose "**Common Data Service**".
+Analytics for the Dataverse can be observed within the **Power Platform Admin Center**. To navigate to these analytics, simply expand the Analytics area of the **Power Platform Admin Center** and choose "**Dataverse**".
 
 <img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/CDSA/PPAC-NavigateTo.JPG" style="zoom:50%;" />
 
 #### Who can access this data?
 
-Its key here to point out that access to this data is limited based on user access to the CDS environment in combination with their Office 365 role. As shown in [this article](https://docs.microsoft.com/en-us/power-platform/admin/analytics-common-data-service#who-can-view-these-reports) there consist of various admin roles within Office 365 that will scope to specific reports. **Environment Admin will scope to environments the admin has access to** while other admin roles will expose every environment.
+Its key here to point out that access to this data is limited based on user access to the **Dataverse** environment in combination with their Office 365 role. As shown in [this article](https://docs.microsoft.com/en-us/power-platform/admin/analytics-common-data-service#who-can-view-these-reports) there consist of various admin roles within Office 365 that will scope to specific reports. **Environment Admin will scope to environments the admin has access to** while other admin roles will expose every environment.
 
-The **Common Data Service for Analytics** accessibility is somewhat different than the other analytics features and I want to point out what I've seen. One common ask I get is how to allow analysts the ability to view this data without obtaining too much abilities that an Environment Admin would have. I've seen that giving the **Power Platform Admin role in Office 365** will set Environment Admin in each of the **Dynamics 365 environments** within the tenant. Removing this role from the user in the environments will restrict them from performing activities within the environment. *However they will be able to perform administration activities such as backups.*
+The **Dataverse Analytics** accessibility is somewhat different than the other analytics features and I want to point out what I've seen. One common ask I get is how to allow analysts the ability to view this data without obtaining too much abilities that an Environment Admin would have. I've seen that giving the **Power Platform Admin role in Office 365** will set Environment Admin in each of the **Dynamics 365 environments** within the tenant. Removing this role from the user in the environments will restrict them from performing activities within the environment. *However they will be able to perform administration activities such as backups.*
 
 #### Navigating the Portal
 
-With the appropriate permissions, an admin will land on the **Home** dashboard for **Common Data Service for Analytics**. Below is an overview of each of the dashboards available currently.
+With the appropriate permissions, an admin will land on the **Home** dashboard for **Dataverse Analytics**. Below is an overview of each of the dashboards available currently.
 
 ![](https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/CDSA/CDSA-Overview-Tabs.JPG)
 
@@ -82,7 +88,7 @@ The **Average plug-in execution time chart** will visualize the averages based o
 
 ![](https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/CDSA/CDSA-MailboxUsage.JPG)
 
-The **Common Data Service API** is heavily used in the **Power Apps platform** and the final dashboard, [the **API Calls Statistics** dashboard](https://docs.microsoft.com/en-us/power-platform/admin/analytics-common-data-service#api-call-statistics) contains rich data points. This dashboard will help admins see the **API success rate**, **most used API calls**, **all up API calls** and **top failing API calls**.
+The **Dataverse API** is heavily used in the **Power Apps platform** and the final dashboard, [the **API Calls Statistics** dashboard](https://docs.microsoft.com/en-us/power-platform/admin/analytics-common-data-service#api-call-statistics) contains rich data points. This dashboard will help admins see the **API success rate**, **most used API calls**, **all up API calls** and **top failing API calls**.
 
 ![](https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/CDSA/CDSA-API-Calls.JPG)
 
@@ -92,7 +98,7 @@ At the bottom of this dashboard is **the Total API calls chart**. This chart is 
 
 #### Filtering the data returned
 
-The **Common Data Service for Analytics** will show environments an admin has access to review data for. During acceptance or end to end testing, admins may want to focus on a specific environment and time range. [To do this](https://docs.microsoft.com/en-us/power-platform/admin/analytics-common-data-service#view-data-for-different-environments-and-date-time-ranges), click the "**Change filters**" button for any dashboard.
+The **Dataverse Analytics** will show environments an admin has access to review data for. During acceptance or end to end testing, admins may want to focus on a specific environment and time range. [To do this](https://docs.microsoft.com/en-us/power-platform/admin/analytics-common-data-service#view-data-for-different-environments-and-date-time-ranges), click the "**Change filters**" button for any dashboard.
 
 <img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/CDSA/CDSA-Filter.JPG" style="zoom:33%;" />
 
@@ -100,7 +106,7 @@ The filter can be as broad as an entire month or can be as specific as any hour 
 
 #### Export data for Analysis
 
-Data from the **Common Data Service for Analytics** dashboards can be exported to an **Microsoft Excel** spreadsheet for further review and storage by clicking the **"Download"** button. As the image below shows, data points can be collected that may not necessarily be visualized in the **Power Platform Admin Center**.
+Data from the **Dataverse Analytics** dashboards can be exported to an **Microsoft Excel** spreadsheet for further review and storage by clicking the **"Download"** button. As the image below shows, data points can be collected that may not necessarily be visualized in the **Power Platform Admin Center**.
 
 <img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/CDSA/CDSA-Download-AvailableOptions.JPG" style="zoom:33%;" />
 
@@ -112,19 +118,19 @@ These spreadsheets can be used as a source for **Microsoft Power BI** reports or
 
 NOTE: An important report that can be downloaded is the **Non-conformant usage by users with Team Member** license. Please review this report to ensure your organization is [aligned with the **Release Wave 1 2020** announcement](https://docs.microsoft.com/en-us/dynamics365-release-plan/2020wave1/dynamics365-sales/license-enforcement-users-new-team-member-licenses).
 
-### Common Data Service for Analytics PowerShell cmdlets
+### Dataverse Analytics PowerShell cmdlets
 
-Starting in July 2020 the [**PowerShell cmdlets for Power Apps**](https://www.powershellgallery.com/packages/Microsoft.PowerApps.Administration.PowerShell/2.0.56) will be **[generally available](https://docs.microsoft.com/en-us/power-platform-release-plan/2020wave1/power-platform-governance-administration/powershell-cmdlets-power-apps-admins-are-generally)** allowing for automation of tasks typically performed in the **Power Platform Admin Center**. [These commands](https://docs.microsoft.com/en-us/power-platform/admin/powerapps-powershell#powerapps-cmdlets-for-administrators-preview) allow admins the ability to perform management tasks on environments and environment permissions. Admins can govern CDS and underlying technologies such as **custom connectors**, **Power Automate Flows,** **CDS databases**, **Canvas Apps**, etc. 
+Starting in July 2020 the [**PowerShell cmdlets for Power Apps**](https://www.powershellgallery.com/packages/Microsoft.PowerApps.Administration.PowerShell/2.0.56) will be **[generally available](https://docs.microsoft.com/en-us/power-platform-release-plan/2020wave1/power-platform-governance-administration/powershell-cmdlets-power-apps-admins-are-generally)** allowing for automation of tasks typically performed in the **Power Platform Admin Center**. [These commands](https://docs.microsoft.com/en-us/power-platform/admin/powerapps-powershell#powerapps-cmdlets-for-administrators-preview) allow admins the ability to perform management tasks on environments and environment permissions. Admins can govern Dataverse and underlying technologies such as **custom connectors**, **Power Automate Flows,** **Dataverse databases**, **Canvas Apps**, etc. 
 
 According to the [Release Wave 1 2020 article](https://docs.microsoft.com/en-us/power-platform-release-plan/2020wave1/power-platform-governance-administration/powershell-cmdlets-power-automate-admins-are-generally), new cmdlets will be available allowing for managing capacity, user permissions and lifecycle operations for an environment. 
 
 ### Service Health within the Power Platform Admin Center
 
-**Service Health** for the **Common Data Service** can be found within the **Office 365 Admin Portal** by navigating to https://portal.office.com/adminportal. **Current health** as well as **advisories** are shown. Messages for **important updates** such as **planned maintenance** can also be found here. Both the service health and messaging allow for email delivery. Currently this is limited to two so consider ways to broadcast this via distribution lists, Office Groups, or Microsoft Team channels!
+**Service Health** for the **Dataverse** can be found within the **Office 365 Admin Portal** by navigating to https://portal.office.com/adminportal. **Current health** as well as **advisories** are shown. Messages for **important updates** such as **planned maintenance** can also be found here. Both the service health and messaging allow for email delivery. Currently this is limited to two so consider ways to broadcast this via distribution lists, Office Groups, or Microsoft Team channels!
 
 ## Next Steps
 
-As the **Common Data Service for Analytics** feature evolves, I expect administrators will be given increased visibility and tooling to assist with the governance of CDS environments. Until then continue exploring the dashboard and export capabilities to assist with unification of CDS environment activity. As touched on briefly, there are mechanisms available now to help build custom reporting and alerting which will be elaborated on in another article.
+As the **Dataverse Analytics** feature evolves, I expect administrators will be given increased visibility and tooling to assist with the governance of Dataverse environments. Until then continue exploring the dashboard and export capabilities to assist with unification of Dataverse environment activity. As touched on briefly, there are mechanisms available now to help build custom reporting and alerting which will be elaborated on in another article.
 
 If you are interested in learning more about [**specialized guidance and training** for monitoring or other areas of the Power Platform](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), which includes a [monitoring workshop](https://community.dynamics.com/cfs-file/__key/communityserver-blogs-components-weblogfiles/00-00-00-17-38/WorkshopPLUS-_2D00_-Dynamics-365-Customer-Engagement-Monitoring-with-Application-lnsights-1-Day-with-Lab_2D00_FA5D599F_2D00_20E4_2D00_4087_2D00_A713_2D00_39FBD14DF7E5.pdf), please contact your **Technical Account Manager** or **Microsoft representative** for further details. 
 
